--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"connect-flash": "^0.1.1",
+		"connect-mongo": "^3.1.2",
 		"cookie-parser": "^1.4.4",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
