--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 	"devDependencies": {},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "node app.js",
-		"dev": "nodemon app.js"
+		"start2": "node app.js",
+		"start": "nodemon app.js"
 	},
 	"author": "",
 	"license": "ISC"
